--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: kside
 
 # Short bio or description (displayed in the header)
-description: Bucket for random thoughts
+description: a bucket for random thoughts
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://cdn3.iconfinder.com/data/icons/avatars-9/145/Avatar_Cat-128.png
